# pyserial

./: README.rst  pyproject.toml
.github/workflows/: push-pr-unit-tests.yml  reusable-unit-tests.yml
examples/: rfc2217_server.py
serial/: __init__.py  rfc2217.py
serial/tools/: miniterm.py
